# ArqCAD

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
apps/desktop/ArcForge.Desktop/: App.axaml  App.axaml.cs  ArcForge.Desktop.csproj  CadToolIcon.cs  CadViewport.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
apps/desktop/ArcForge.Desktop/Frontend/: CommandSession.cs  DialogCatalog.cs  RibbonCatalog.cs  UiAction.cs  UiActionCatalog.cs  UiPalette.cs  WorkspaceSession.cs
apps/desktop/ArcForge.Desktop/Theme/: Palette.axaml  Styles.axaml
apps/desktop/ArcForge.Native/: AfNative.cs  ArcForge.Native.csproj
crates/af-api/: Cargo.toml
crates/af-api/src/: dto.rs  error.rs  lib.rs  session.rs  wasm.rs
crates/af-bench/: Cargo.toml
crates/af-bench/benches/: baseline.rs
crates/af-bench/src/: gen.rs  lib.rs  workloads.rs
crates/af-cmd/: Cargo.toml
crates/af-cmd/src/: args.rs  lib.rs  parse.rs  pgp.rs  registry.rs  spec.rs
crates/af-cmd/src/builtin/: addselected.rs  align.rs  arc.rs  array.rs  audit.rs  break_cmd.rs  chamfer.rs  chprop.rs  circle.rs  clayer.rs  color_cmd.rs  copy.rs  donut.rs  draw.rs  edit_common.rs  ellipse.rs  erase.rs  explode.rs  group.rs  isolate.rs  join.rs  lay_bulk.rs  lay_object.rs  layer_cmd.rs  layiso.rs  lengthen.rs  limits_cmd.rs  line.rs  line_props.rs  matchprop.rs  mirror.rs  mod.rs  modify.rs  move_cmd.rs  nudge.rs  oops.rs  overkill.rs  pline.rs  point.rs  polygon.rs  (+18 more)
crates/af-cmd/tests/: builtins.rs  cmd_addselected.rs  cmd_audit.rs  cmd_chprop.rs  cmd_circle_ttr.rs  cmd_clayer.rs  cmd_color.rs  cmd_copy.rs  cmd_draw.rs  cmd_edit.rs  cmd_erase.rs  cmd_group.rs  cmd_isolate.rs  cmd_layer.rs  cmd_line.rs  cmd_line_props.rs  cmd_matchprop.rs  cmd_mirror.rs  cmd_modify.rs  cmd_move.rs  cmd_nudge.rs  cmd_oops.rs  cmd_overkill.rs  cmd_purge.rs  cmd_query.rs  cmd_reverse.rs  cmd_rotate.rs  cmd_scale.rs  cmd_setbylayer.rs  cmd_setvar.rs  cmd_stretch_array_explode.rs  cmd_units_limits.rs  cmd_xline.rs  parser.rs  pgp.rs  registry.rs
crates/af-ffi/: Cargo.toml
crates/af-ffi/include/: arccad.h
crates/af-ffi/src/: lib.rs
crates/af-ffi/tests/: c_smoke.c  execute_json.rs  layers_json.rs  lifecycle.rs
crates/af-geom/: Cargo.toml
crates/af-geom/src/: arc.rs  area.rs  bulge.rs  circle.rs  ellipse.rs  flatten.rs  intersect.rs  lib.rs  nurbs.rs  offset.rs  polygon.rs  project.rs  revcloud.rs  tangent.rs
crates/af-io-dxf/: Cargo.toml
crates/af-io-dxf/src/: aci.rs  export.rs  import.rs  lib.rs  report.rs
crates/af-io-dxf/tests/: export.rs  import.rs
crates/af-io-dxf/tests/golden/dxf/export/: .gitattributes  empty.dxf  fixture.dxf
crates/af-io-native/: Cargo.toml
crates/af-io-native/src/: lib.rs
crates/af-io-native/tests/: golden.rs
crates/af-io-native/tests/golden/arcf/v1/: sample.arcf
crates/af-math/: Cargo.toml
crates/af-math/src/: angle.rs  bbox.rs  lib.rs  point.rs  tol.rs  transform.rs  vec.rs
crates/af-math/tests/: props.rs  serde_repr.rs  units.rs
crates/af-model/: Cargo.toml
crates/af-model/src/: changeset.rs  container.rs  doc.rs  extents.rs  groups.rs  history.rs  id.rs  layers.rs  layers_ops.rs  layouts.rs  lib.rs  lin.rs  pat.rs  session.rs  styles.rs  sysvar.rs  tx.rs  units.rs  validate.rs
crates/af-model/src/entity/: arc.rs  circle.rs  ellipse.rs  line.rs  mod.rs  point.rs  polyline.rs  ray.rs  record.rs  spline.rs  style_props.rs  wipeout.rs  xline.rs
crates/af-model/src/storage/: fill.rs  key.rs  mod.rs  pool.rs  store.rs
crates/af-model/tests/: bbox_column.rs  container_migration.rs  doc.rs  entity_base.rs  extents.rs  history.rs  id.rs  layers_ops.rs  lin.rs  pat.rs  tx.rs  units.rs  validate.rs
crates/af-model/tests/conformance/: arc.rs  circle.rs  ellipse.rs  infinite.rs  line.rs  mod.rs  polyline.rs  snaps.rs  spline.rs  wipeout.rs
crates/af-model/tests/fixtures/: arcforge_sample.lin  arcforge_sample.pat
crates/af-render/: Cargo.toml
crates/af-render/src/: build.rs  lib.rs  palette.rs
crates/af-render/src/shx/: decode.rs  mod.rs
crates/af-render/tests/: render.rs  shx.rs
crates/af-select/: Cargo.toml
crates/af-select/benches/: select_bench.rs
crates/af-select/src/: filter.rs  hit.rs  index.rs  lib.rs  poly.rs  selection.rs  snap.rs
crates/af-select/tests/: advanced_select.rs  oracle.rs  pick_scenarios.rs  selection.rs  snap_calc.rs  snap_scenarios.rs  visit_equivalence.rs  window_crossing.rs
crates/af-select/tests/common/: mod.rs
tools/: gen-goldens.py
tools/desktop-screenshot/: ArcForge.Desktop.Screenshot.csproj  Program.cs
tools/native-smoke/: ArcForge.Native.Smoke.csproj  Program.cs
