[package]
name = "af-math"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
